--- a/view/cardUp.html
+++ b/view/cardUp.html
@@ -20,7 +20,7 @@
       align-items: center;
     }
     .top-content>span{
-      font-size: 26px;
+      font-size: .346667rem;
       color: #989898;
     }
     /* 身份证上传样式 */
