--- a/view/success.html
+++ b/view/success.html
@@ -33,7 +33,7 @@
   </style>
 </head>
 
-<body>
+<body class="bg-f7">
   <header>
     <a href="./signWait.html"><img src="../img/icon-back.png" alt=""></a>
     <h1>签署成功</h1>
@@ -48,7 +48,6 @@
     </section>
   </article>
   <footer>
-    <span>本服务由亿签网技术支持</span>
   </footer>
 </body>
 
