--- a/docs/css/login.css
+++ b/docs/css/login.css
@@ -3,6 +3,9 @@
   padding: 0;
   border: none;
 }
+body{
+  height: 100vh;
+}
 /* 去掉链接下划线 */
 a:link { 
   text-decoration: none; 
@@ -11,6 +14,9 @@ a:link {
   text-decoration: none; 
   } 
 /**************************************************************************** 顶部导航 ****************************************************************************/
+body>header{
+  background: #fff;
+}
 header{
   text-align: center;
   padding: .493333rem .4rem;
@@ -175,6 +181,9 @@ footer{
 
 
 /**************************************************************************** 公共样式 ****************************************************************************/
+.fixed{
+  position: fixed;
+}
 .flex-box{
   display: flex;
 }
