--- a/view/login.html
+++ b/view/login.html
@@ -23,22 +23,41 @@
     <section class="ipt-content">
       <div class="ipt-group line-bottom">
         <img src="../img/icon-phone.png" alt="" srcset="">
-        <input type="text" class="ipt-phone" placeholder="请填写手机号码">
-        <button>获取验证码</button>
+        <input id="phone" type="text" class="ipt-phone" placeholder="请填写手机号码">
+        <button onclick="send()">获取验证码</button>
       </div>
       <div class="ipt-group line-bottom">
           <img src="../img/icon-viste.png" alt="" srcset="">
-          <input type="text" class="ipt-viste" placeholder="请输入验证码">
+          <input id="code" type="text" class="ipt-viste" placeholder="请输入验证码">
       </div>
       <div class="ipt-group viste-call"><img src="../img/icon-w.png" alt="" srcset=""><span>收不到短信，试试<a href="">语音验证码</a></span></div>
     </section>
     <section class="btn-content">
-      <a href="./email.html" class="btn btn-danger">提交验证</a>
+      <button class="btn btn-danger" onclick="submit()">提交验证</button>
     </section>
   </article>
   <footer>
     <span>本服务由亿签网技术支持</span>
   </footer>
+  <script src="../js/axios/dist/axios.min.js"></script>
+  <script src="../js/config/config.js"></script>
+  <script>
+    function send(){
+      var phone = document.getElementById('phone').value,
+          url = window.webConfig.apiUrl + '/api/userauth/askcode?id='+phone
+      axios.get(url).then(function(res){
+        console.log(res)
+      })
+    }
+    function submit(){
+      var phone = document.getElementById('phone').value,
+          code = document.getElementById('code').value,
+          url = window.webConfig.apiUrl + '/api/userauth/askcode?id='+phone+'&code='+code
+          axios.get(url).then(function(res){
+            console.log(res)
+          })
+    }
+  </script>
 </body>
 
 </html>
