--- a/view/personInfo.html
+++ b/view/personInfo.html
@@ -45,6 +45,7 @@
             background-color: #ffffff;
             border-radius: .133333rem;
             margin-top: -0.613333rem;
+            box-shadow: 0px 0px 100px 0px #fa5c5847;
         }
 
         /* 头像部分 */
