图标重命名

--- a/view/personInfo.html
+++ b/view/personInfo.html
@@ -106,7 +106,7 @@
         <section class="info-content">
             <div class="card-box">
                 <section class="header">
-                    <img src="../img/頭像.png" alt="" srcset="">
+                    <img src="../img/icon-person.png" alt="" srcset="">
                 </section>
                 <section class="person-info-content">
                     <ul>
@@ -119,7 +119,7 @@
                             <p>邮 箱:<span class="body">492113976@qq.com</span></p>
                         </li>
                         <li>
-                            <img src="../img/认证状态@2x.png" alt="">
+                            <img src="../img/icon-identify@2x.png" alt="">
                             <p>认证状态:<span class="body">已认证</span></p>
                         </li>
                     </ul>
