--- a/view/signFinish.html
+++ b/view/signFinish.html
@@ -25,40 +25,40 @@
     <section class="list-content">
       <ul>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-          <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+          <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
         <li class="list-item flex-box flex-space-between flex-aligin-center">
-            <span>客户询证函4971110D0118060014</span><img src="../img/返回拷贝@3x.png" alt="">
+            <span>客户询证函4971110D0118060014</span><img src="../img/icon-right@3x.png" alt="">
         </li>
       </ul>
     </section>
